feat: Prepare for the first release on maven central.
Still need to set up publishing, but the project is in a good point right now.